# rootcause-graph-improve

./: TODO.md  UPDATE.md
backend/: README.md  pyproject.toml
backend/app/: graph.py  main.py  models.py  simulator.py  storage.py
backend/app/sample_graphs/: generate_large.py  large.json  medium.json  simple.json
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: GraphEditor.tsx  GraphList.tsx  GraphVisualization.tsx  InterventionPanel.tsx  ResultsView.tsx
frontend/src/app/api/trpc/[trpc]/: route.ts
frontend/src/hooks/: useGraphApi.ts
frontend/src/lib/: api.ts  apiBaseUrl.ts  graphUtils.ts  intervention.ts  types.ts
frontend/src/lib/__tests__/: graphUtils.test.ts  intervention.test.ts
frontend/src/server/api/: root.ts
frontend/src/server/api/routers/: graph.ts
frontend/src/trpc/: react.tsx
