[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jonas Skackauskas <jonas.skackauskas@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}


[tool.poetry.scripts]
dev = "app.main:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
